rust/macros/tests/invalid/target/debug/deps/only_comma-7f92b01557f0289f.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/only_comma-7f92b01557f0289f.d: only_comma.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libonly_comma-7f92b01557f0289f.rmeta: only_comma.rs Cargo.toml

only_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
